# flake

./: .gitignore  CMakeLists.txt  README.md
include/: TestLibrary.hpp
include/flake/framework/: camera.hpp  display.hpp  input.hpp
include/flake/geometry/: drawable.hpp  shape.hpp
include/flake/gl/: buffer.hpp  context.hpp  glewcontext.hpp  mesh.h  mesh.hpp  program.h  program.hpp  shader.h  shader.hpp
lib/: CMakeLists.txt  TestLibrary.cpp
lib/framework/: CMakeLists.txt  display.cpp
lib/gl/: CMakeLists.txt  glewcontext.cpp  mesh.cpp  program.cpp  shader.cpp
test/: CMakeLists.txt  bezier.cpp  data  frag.glsl  in  oldmesh.cpp  oldmesh.h  righttri  test.cpp  tri.cpp  vert.glsl
